welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:7: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
  }gauche()
   ^Runner:14: error: value droite is not a member of Unit
possible cause: maybe a semicolon is missing before `value droite'?
  }droite()
   ^